@@ -3,6 +3,7 @@
 S3method(as.binary,phylo)
 S3method(as.data.frame,phylo)
 S3method(fortify,beast)
+S3method(fortify,codeml_mlc)
 S3method(fortify,jplace)
 S3method(fortify,phylo)
 S3method(fortify,phylo4)
@@ -24,6 +25,7 @@ export(get.treeinfo)
 export(get.treetext)
 export(ggtree)
 export(gplot)
+export(plot)
 export(read.beast)
 export(read.codeml)
 export(read.codeml_mlc)
@@ -43,6 +45,7 @@ exportMethods(get.placements)
 exportMethods(get.tree)
 exportMethods(get.treeinfo)
 exportMethods(get.treetext)
+exportMethods(plot)
 exportMethods(show)
 importFrom(Biostrings,readBStringSet)
 importFrom(Biostrings,toString)
@@ -85,3 +88,4 @@ importFrom(magrittr,add)
 importFrom(magrittr,equals)
 importFrom(methods,show)
 importFrom(reshape2,melt)
+importFrom(stats4,plot)
