@@ -1,15 +1,18 @@
 % Generated by roxygen2 (4.1.0): do not edit by hand
-% Please edit documentation in R/AllGenerics.R, R/beast.R, R/jplace.R
+% Please edit documentation in R/AllGenerics.R, R/beast.R, R/codeml_mlc.R, R/jplace.R
 \docType{methods}
 \name{get.fields}
 \alias{get.fields}
 \alias{get.fields,beast-method}
+\alias{get.fields,codeml_mlc-method}
 \alias{get.fields,jplace,ANY-method}
 \title{get.fields method}
 \usage{
 get.fields(object, ...)
 
 \S4method{get.fields}{beast}(object, ...)
+
+\S4method{get.fields}{codeml_mlc}(object)
 
 get.fields(object, ...)
 }
