@@ -1,14 +1,17 @@
 % Generated by roxygen2 (4.1.0): do not edit by hand
-% Please edit documentation in R/AllGenerics.R, R/beast.R
+% Please edit documentation in R/AllGenerics.R, R/beast.R, R/codeml_mlc.R
 \docType{methods}
 \name{get.tree}
 \alias{get.tree}
 \alias{get.tree,beast}
+\alias{get.tree,codeml_mlc-method}
 \title{get.tree method}
 \usage{
 get.tree(object, ...)
 
 get.tree(object, ...)
+
+\S4method{get.tree}{codeml_mlc}(object, ...)
 }
 \arguments{
 \item{object}{one of \code{jplace}, \code{beast} object}
