@@ -1,5 +1,5 @@
 % Generated by roxygen2 (4.1.0): do not edit by hand
-% Please edit documentation in R/paml.R
+% Please edit documentation in R/codeml_mlc.R
 \name{read.codeml_mlc}
 \alias{read.codeml_mlc}
 \title{read.codeml_mlc}
