@@ -1,5 +1,5 @@
 % Generated by roxygen2 (4.1.0): do not edit by hand
-% Please edit documentation in R/paml.R
+% Please edit documentation in R/paml_rst.R
 \name{read.paml_rst}
 \alias{read.paml_rst}
 \title{read.paml_rst}
