@@ -1,5 +1,6 @@
 CHANGES IN VERSION 0.99.4
 ------------------------
+ o show, plot, get.tree and fority methods for codeml_mlc class <2014-12-29, Mon>
  o codeml class <2014-12-29, Mon>
  o hyphy class and read.hyphy <2014-12-27, Sat>
  o update man file and add example file of beast output <2014-12-26, Fri>
